--- a/lista_contatoc.html
+++ b/lista_contatoc.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div id="msg" class="col-sm-2 offset-sm-10 ">
-                <a href="indexc.html"><input type="button" class="btn btn-warning" id="btnClear" value="Cadastro"></a>
+                <a href="index.html"><input type="button" class="btn btn-warning" id="btnClear" value="Cadastro"></a>
             </div>
         </div>        
         
